fix background to remove white space

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,11 +19,13 @@
 body {
   background-image: url('/assets/woman-smiling.jpg');
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 h1 {
   color: turquoise;
-  font-family:
+  font-family: 'Libre Baskerville', serif;
 }
 
 .container {
@@ -42,8 +44,8 @@ h1 {
 }
 
 p {
-  font-family: 'Courier', Helvetica, Arial, sans-serif;
-  font-size: 1.5em;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 1.0em;
   color: pink;
   font-weight: bold;
 }
